--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -21,11 +21,14 @@
             margin-bottom: 2.5rem;
         }
         &-2{
-            margin-bottom: 2.5rem;
+            display: flex;
+            flex-direction: column;
         }
     }
 
     &__stats {
+        display: flex;
+        flex-direction: row;
         margin-left: 5rem;
     }
 
